<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.dancetrix.activity.registration.RegisterPhotoConsentActivity"
    android:id="@+id/activity_register_photo_consent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/top_toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/register_photo_consent" />

    <TextView
        android:id="@+id/photoConsentInfoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="8dp"
        android:maxLines="100"
        android:scrollbars="vertical"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/consentYesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/consentYesButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="12sp"
        android:padding="6sp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/submit_button"
        android:text="@string/register_photo_consent_yes"
        android:onClick="submitConsentYes"
        app:layout_constraintBottom_toTopOf="@id/consentNoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/consentNoButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="12sp"
        android:padding="6sp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/submit_button"
        android:text="@string/register_photo_consent_no"
        android:onClick="submitConsentNo"
        app:layout_constraintBottom_toTopOf="@id/contentUnidentifiableButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contentUnidentifiableButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textSize="12sp"
        android:padding="6sp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/submit_button"
        android:text="@string/register_photo_consent_unidentifiable"
        android:onClick="submitConsentUnidentifiable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
