<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.dancetrix.activity.registration.RegisterMenuActivity"
    android:id="@+id/activity_register_menu">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/top_toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/register_dancer" />

    <ScrollView
        android:id="@+id/homeButtonList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bookClassButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:drawableRight="@drawable/ic_chevron_right"
                android:onClick="selectAdult"
                android:text="@string/register_adult"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/calendarButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:drawableRight="@drawable/ic_chevron_right"
                android:onClick="selectChild"
                android:text="@string/register_child"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
